Suppression commentaires + date dynamique

--- a/projet_cookie.html
+++ b/projet_cookie.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <!----- NAVBAR ----->
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
@@ -42,7 +41,6 @@
         </div>
     </nav>
 
-    <!----- CONTENT ----->
     <div class="experience_content">
         <h1>&#60; Projet Mobile : Cookie Clicker /&#62; </h1>
         <p>J'ai réalisé ce projet en binôme au cours de mon année de Licence Informatique dans le cadre d'un cours de
@@ -89,8 +87,7 @@
         </div>
     </div>
 
-    <!----- FOOTER ----->
-    <footer>2023 &copy; Corentin Rio - Tous droits réservés</footer>
+    <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
 
 </body>
 
