--- a/projet_tictactoe.html
+++ b/projet_tictactoe.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <!----- NAVBAR ----->
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
@@ -42,7 +41,6 @@
         </div>
     </nav>
 
-    <!----- CONTENT ----->
     <div class="experience_content">
         <h1>&#60; Projet Mobile : Tic Tac Toe /&#62; </h1>
         <p>J'ai réalisé ce projet autonomie sur mon temps libre</p>
@@ -60,8 +58,7 @@
 
     </div>
 
-    <!----- FOOTER ----->
-    <footer>2023 &copy; Corentin Rio - Tous droits réservés</footer>
+    <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
 
 </body>
 
