--- a/stage_neolink.html
+++ b/stage_neolink.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <!----- NAVBAR ----->
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
@@ -42,14 +41,12 @@
         </div>
     </nav>
 
-    <!----- CONTENT ----->
     <div class="experience_content">
         <h1>&#60; Stage Néolink /&#62; </h1>
         <p>Ce stage a constitué ma première expérience professionnelle dans le domaine de l'informatique</p>
     </div>
 
-    <!----- FOOTER ----->
-    <footer>2023 &copy; Corentin Rio - Tous droits réservés</footer>
+    <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
 
 </body>
 
