--- a/integration_web_bootstrap.html
+++ b/integration_web_bootstrap.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <!----- NAVBAR ----->
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
@@ -42,7 +41,6 @@
         </div>
     </nav>
 
-    <!----- CONTENT ----->
     <div class="experience_content">
         <h1>&#60; Intégration Web : Site Responsive avec Bootstrap /&#62; </h1>
         <p>J'ai réalisé ce projet ma 1<sup>re</sup> année de DUT MMI dans le cadre d'un cours d'intégration web'.</p>
@@ -63,8 +61,7 @@
         </div>
     </div>
 
-    <!----- FOOTER ----->
-    <footer>2023 &copy; Corentin Rio - Tous droits réservés</footer>
+    <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
 
 </body>
 
