--- a/projet_tuteure.html
+++ b/projet_tuteure.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <!----- NAVBAR ----->
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
@@ -42,7 +41,6 @@
         </div>
     </nav>
 
-    <!----- CONTENT ----->
     <div class="experience_content">
         <h1>&#60; Projet Tuteuré /&#62; </h1>
         <p>
@@ -66,8 +64,7 @@
         </div>
     </div>
 
-    <!----- FOOTER ----->
-    <footer>2023 &copy; Corentin Rio - Tous droits réservés</footer>
+    <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
 
 </body>
 
