Suppression slider langages et logiciels

--- a/index.html
+++ b/index.html
@@ -119,62 +119,7 @@
     </div>
 
     <h2 class="slider_title">Langages et logiciels maîtrisés</h2>
-    <div class="slider_body">
-        <div class="slider">
-            <i id="left" class="arrow fa-solid fa-angle-left">&#10094</i>
-            <ul class="carousel">
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_html.png" alt="img" draggable="false"></div>
-                    <h2>HTML5</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_css.png" alt="img" draggable="false"></div>
-                    <h2>CSS3</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_javascript.png" alt="img" draggable="false"></div>
-                    <h2>JavaScript</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_php.png" alt="img" draggable="false"></div>
-                    <h2>PHP</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_sql.png" alt="img" draggable="false"></div>
-                    <h2>SQL</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_angular.png" alt="img" draggable="false"></div>
-                    <h2>Angular</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_bootstrap.png" alt="img" draggable="false"></div>
-                    <h2>Bootstrap</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_java.png" alt="img" draggable="false"></div>
-                    <h2>Java</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_android.png" alt="img" draggable="false"></div>
-                    <h2>Android Studio</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_illustrator.png" alt="img" draggable="false"></div>
-                    <h2>Adobe Illustrator</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_indesign.png" alt="img" draggable="false"></div>
-                    <h2>Adobe InDesign</h2>
-                </li>
-                <li class="card">
-                    <div class="img"><img src="annexes/icon_github_desktop.png" alt="img" draggable="false"></div>
-                    <h2>GitHub Desktop</h2>
-                </li>
-            </ul>
-            <i id="right" class="arrow fa-solid fa-angle-right">&#10095</i>
-        </div>
-    </div>
+    <p>Todo</p>
 
     <div id="experiences" class="experiences">
         <h1>&#60; Expériences et Projets /&#62; </h1>
