Ajout contenu + Suppression CV dans menu

--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
         <h1>&#60; Présentation /&#62; </h1>
         <div class="presentation_content">
             <img class="avatar" src="annexes/avatar.png" draggable="false">
-            <div>
-               <p class="presentation_txt">
-                Hi!<br>
-                My name is Corentin Rio and I am 20 years old. I’m currently
+            <div class="presentation_txt">
+               <p>
+                Bonjour ! 
+                Je m'appelle Corentin Rio et j'ai 22 ans. Je suis actuellement étudiant en 2e année de Master Informatique à Orléans.
+                Je vous laisse voir tous mes projets ci-dessous en espérant qu'ils vous plaisent.
+
+                <br>N'hésitez pas à me contacter si besoin.
+                <!--Hi!<br>
+                My name is Corentin Rio and I am 22 years old. I’m currently
                 studying in a 2-year degree in multimedia and internet jobs.
                 Thanks to this versatile course, I’m pretty comfortable with
                 the graphic design programs like Illustrator and InDesign. I
@@ -67,10 +72,10 @@
                 vibrant. I’m always dedicated in my work. I like well done
                 work.<br>
                 I hope you’ll enjoy your visit, don’t hesitate to contact me if
-                you need further information.
+                you need further information.-->
             </p> 
-            <div id="cv" class="cv">
-                <a class="download_btn" href="annexes/cv.pdf" target="_blank"><span>Consulter mon CV</span></a>
+            <div class="download_btn">
+                <a href="annexes/cv.pdf" target="_blank"><span>Consulter mon CV</span></a>
             </div>
             </div>
         </div>
@@ -118,7 +123,7 @@
         </div>
     </div>
 
-    <h2 class="slider_title">Langages et logiciels maîtrisés</h2>
+    <h2>Langages et logiciels maîtrisés</h2>
     <p>Todo</p>
 
     <div id="experiences" class="experiences">
@@ -133,14 +138,7 @@
                             <h3>Gestion de tickets de maintenance en PHP</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Stage Néolink</h1>
-                                <p>Stage de 12 semaines au sein de Néolink dans le cadre de ma Licence
-                                    informatique. Prise en charge de tickets de maintenance en PHP sur le framework
-                                    maison de Néolink : Phuton</p>
-                                <a href="stage_neolink.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="stage_neolink.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -152,14 +150,7 @@
                             <h3>Projet MATEX</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Stage CNRS Projet MATEX</h1>
-                                <p>Stage de 12 semaines au sein du CNRS d'Orléans dans le cadre de mon DUT. Réalisations
-                                    d'éléments de communication pour lancer le projet ARD MATEX porté par la région
-                                    CVL</p>
-                                <a href="stage_cnrs.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="stage_cnrs.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -171,13 +162,7 @@
                             <h3>Cookie Clicker</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Projet Mobile<br>Cookie Clicker</h1>
-                                <p>Réalisation d'une application mobile en Java dans le cadre de ma Licence Informatique
-                                </p>
-                                <a href="projet_cookie.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="projet_cookie.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -191,12 +176,7 @@
                             <h3>Tic Tac Toe</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Projet Mobile<br>Tic Tac Toe</h1>
-                                <p>Réalisation d'une application mobile en Java</p>
-                                <a href="projet_tictactoe.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="projet_tictactoe.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -208,12 +188,7 @@
                             <h3>Responsive Web Design (HTML/CSS)</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Intégration Web</h1>
-                                <p>Intégration d'une page web responsive en HTML/CSS</p>
-                                <a href="integration_web.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="integration_web.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -225,12 +200,7 @@
                             <h3>Responsive Web Design (Bootstrap)</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Intégration Web</h1>
-                                <p>Intégration d'une page web responsive avec Bootstrap</p>
-                                <a href="integration_web_bootstrap.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="integration_web_bootstrap.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -244,12 +214,7 @@
                             <h3>La compagnie des <br> p'tits loups</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Projet Tuteuré</h1>
-                                <p>Réalisation d'éléments de communication pour une micro-crèche</p>
-                                <a href="projet_tuteure.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="projet_tuteure.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -261,12 +226,7 @@
                             <h3>Affiche Minimaliste</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Affiche Minimaliste</h1>
-                                <p>Réalisation d'une affiche sur Adobe Illustrator</p>
-                                <a href="affiche_minimaliste.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="affiche_minimaliste.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
@@ -278,12 +238,7 @@
                             <h3>Affiche Typographique</h3>
                         </div>
                         <div class="flip-card-back">
-                            <div class="flip-card-content">
-                                <h1>Affiche Typographique</h1>
-                                <p>Réalisation d'une affiche sur Adobe InDesign</p>
-                                <a href="affiche_typoraphique.html"><button class="experience_btn">Plus
-                                        d'informations</button></a>
-                            </div>
+                            <a href="affiche_typoraphique.html"><button class="experience_btn">Détails</button></a>
                         </div>
                     </div>
                 </div>
