--- a/stage_cnrs.html
+++ b/stage_cnrs.html
@@ -16,7 +16,6 @@
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
-        <a href="index.html#cv">Mon CV</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#experiences">Expériences et Projets</a>
         <a href="index.html#contact">Contact</a>
@@ -34,7 +33,6 @@
         <div class="ulMobile">
             <a href="index.html#">Accueil</a>
             <a href="index.html#presentation">Présentation</a>
-            <a href="index.html#cv">Mon CV</a>
             <a href="index.html#competences">Compétences</a>
             <a href="index.html#experiences">Expériences et Projets</a>
             <a href="index.html#contact">Contact</a>
@@ -43,38 +41,25 @@
 
     <div class="experience_content">
         <h1>&#60; Stage CNRS /&#62; </h1>
-        <p>
-            Ce stage de fin de DUT constitue ma première expérience professionnelle dans le domaine de la communication.
-        </p>
-        <p>
-            La diversité des missions qui m’ont été confiées a mis en exergue les
-            compétences polyvalentes de ma formation de DUT MMI.
-            Cette immersion de douze semaines a été très enrichissante car j’ai pu lancer le
-            projet MATEX en autonomie sans être retenu par des contraintes graphiques ou
-            éditoriales.
-        </p>
-
-        <h2>Création de la charte graphique et du logo</h2>
-        <div class="matex_logos">
-            <img src="annexes/MATEX_Logo.png" draggable="false">
-            <img src="annexes/MATEX_Logo_Reduit.png" draggable="false">
-            <img src="annexes/MATEX_Logo_EN.png" draggable="false">
+        <div class="experience_resume">
+            <img class="roll_up_img" src="annexes/MATEX_Roll_Up.png" draggable="false">
+            <div class="experience_text">
+                <p>
+                    Stage de 12 semaines au sein du CNRS d'Orléans dans le cadre de mon DUT. Réalisations d'éléments de communication pour lancer le projet ARD MATEX porté par la région CVL
+                    Ce stage de fin de DUT constitue ma première expérience professionnelle dans le domaine de la communication.
+                </p>
+                <p>
+                    La diversité des missions qui m’ont été confiées a mis en exergue les
+                    compétences polyvalentes de ma formation de DUT MMI.
+                    Cette immersion de douze semaines a été très enrichissante car j’ai pu lancer le
+                    projet MATEX en autonomie sans être retenu par des contraintes graphiques ou
+                    éditoriales.
+                </p>
+                <div class="download_btn">
+                    <a href="annexes/cv.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
+                </div>
+            </div>
         </div>
-
-        <h2>Création d'un roll up</h2>
-        <div class="container">
-            <input type="checkbox" id="zoomCheck">
-            <label for="zoomCheck">
-                <img class="roll_up_img" src="annexes/MATEX_Roll_Up.png" draggable="false">
-            </label>
-        </div>
-
-        <h2>Création d'un dépliant</h2>
-        <div class="depliants">
-            <img src="annexes/MATEX_Depliant_1.png" draggable="false">
-            <img src="annexes/MATEX_Depliant_2.png" draggable="false">
-        </div>
-
     </div>
 
     <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
