--- a/stage_neolink.html
+++ b/stage_neolink.html
@@ -16,7 +16,6 @@
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
-        <a href="index.html#cv">Mon CV</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#experiences">Expériences et Projets</a>
         <a href="index.html#contact">Contact</a>
@@ -34,7 +33,6 @@
         <div class="ulMobile">
             <a href="index.html#">Accueil</a>
             <a href="index.html#presentation">Présentation</a>
-            <a href="index.html#cv">Mon CV</a>
             <a href="index.html#competences">Compétences</a>
             <a href="index.html#experiences">Expériences et Projets</a>
             <a href="index.html#contact">Contact</a>
@@ -43,7 +41,17 @@
 
     <div class="experience_content">
         <h1>&#60; Stage Néolink /&#62; </h1>
-        <p>Ce stage a constitué ma première expérience professionnelle dans le domaine de l'informatique</p>
+        <div class="experience_resume">
+            <img class="roll_up_img" src="annexes/neolink_logo.png" draggable="false">
+            <div class="experience_text">
+                <p>Ce stage a constitué ma première expérience professionnelle dans le domaine de l'informatique</p>
+                <p>Stage de 12 semaines au sein de Néolink dans le cadre de ma Licence informatique.</p>
+                <p>Prise en charge de tickets de maintenance en PHP sur le framework de Néolink : Phuton</p>
+                <div class="download_btn">
+                    <a href="annexes/cv.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
