--- a/motherload.html
+++ b/motherload.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="annexes/avatar.png">
     <link href="style_desktop.css" rel="stylesheet">
     <link href="style_tablet.css" rel="stylesheet">
     <link href="style_mobile.css" rel="stylesheet">
@@ -16,7 +17,6 @@
     <nav>
         <a href="index.html#">Accueil</a>
         <a href="index.html#presentation">Présentation</a>
-        <a href="index.html#cv">Mon CV</a>
         <a href="index.html#competences">Compétences</a>
         <a href="index.html#experiences">Expériences et Projets</a>
         <a href="index.html#contact">Contact</a>
@@ -34,7 +34,6 @@
         <div class="ulMobile">
             <a href="index.html#">Accueil</a>
             <a href="index.html#presentation">Présentation</a>
-            <a href="index.html#cv">Mon CV</a>
             <a href="index.html#competences">Compétences</a>
             <a href="index.html#experiences">Expériences et Projets</a>
             <a href="index.html#contact">Contact</a>
@@ -47,16 +46,18 @@
             Programmation Mobile Android.</p>
         <p>Communiquer avec des web services php, bdd, j'ai fait des ajouts sur mon temps perso après le projet...</p>
 
-        <h2>Maquettes de l'application</h2>
-        <p>Nous avons commencé par créer des maquettes :</p>
-
-        <video href=""></video>
-        <video controls width="250">
-            <source src="annexes/motherload_recording.mp4" type="video/mp4" />
-          </video>
-
-    <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
+        <div class="smartphone">
+            <div class="content">
+                <video controls width="300px" height="550px">
+                    <source src="annexes/motherload_recording.mp4" type="video/mp4" />
+                </video>
+            </div>
+        </div>
+        
+    </div>
 
 </body>
+
+<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
 
 </html>
