--- a/affiche_typoraphique.html
+++ b/affiche_typoraphique.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="annexes/avatar.png">
     <link href="style_desktop.css" rel="stylesheet">
     <link href="style_tablet.css" rel="stylesheet">
     <link href="style_mobile.css" rel="stylesheet">
@@ -53,8 +54,8 @@
         </div>
     </div>
 
-    <footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
-
 </body>
+
+<footer><span class="year"></span> &copy; Corentin Rio - Tous droits réservés</footer>
 
 </html>
