--- a/index.html
+++ b/index.html
@@ -85,46 +85,70 @@
 
     <div id="competences" class="competences">
         <h1>&#60; Compétences /&#62; </h1>
+        <p>Langages ou logiciels ?</p> 
 
         <div class="competences_content">
             <div class="competence">
-                <img src="annexes/icon_web.png" draggable="false">
-                <h3>Développement Web</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, id repellendus laudantium alias amet
-                    est sint at veritatis magnam iure, recusandae rerum minima obcaecati corporis. Maxime perferendis
-                    iste excepturi voluptatum.</p>
+                <div class="skill_img">
+                    <img src="annexes/icon_android.png">
+                </div>
+                <p>Android</p>
             </div>
 
             <div class="competence">
-                <img src="annexes/icon_smartphone.png" draggable="false">
-                <h3>Développement Mobile</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quaerat quo. Pariatur odit
-                    exercitationem, cumque quasi expedita quibusdam laborum nemo esse ipsam hic, sapiente dolorum eum
-                    vero deleniti possimus dolores?</p>
+                <div class="skill_img">
+                    <img src="annexes/icon_swift.png">
+                </div>
+                <p>iOS</p>
             </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icon_flutter.png">
+                </div>
+                <p>Flutter</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icon_html.png">
+                    <img src="annexes/icon_css.png">
+                </div>
+                <p>HTML & CSS</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icon_javascript.png">
+                </div>
+                <p>JavaScript</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icon_php.png">
+                </div>
+                <p>PHP</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icon_java.png">
+                </div>
+                <p>Java</p>
+            </div>
+
+            <div class="competence">
+                <div class="skill_img">
+                    <img src="annexes/icon_github_desktop.png">
+                </div>
+                <p>GitHub</p>
+            </div>
+            
         </div>
-
-        <div class="competences_content">
-            <div class="competence">
-                <img src="annexes/icon_design.png" draggable="false">
-                <h3>Design et Infographie</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis mollitia doloremque qui, dolor
-                    repudiandae provident corrupti error pariatur hic. Animi error placeat alias ducimus distinctio
-                    aspernatur ullam mollitia ipsum! In?</p>
-            </div>
-
-            <div class="competence">
-                <img src="annexes/icon_megaphone.png" draggable="false">
-                <h3>Communication et Marketing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae adipisci dolorum ea soluta saepe
-                    suscipit esse nam ducimus, deserunt laborum expedita obcaecati ad harum minus dignissimos aspernatur
-                    laudantium culpa a?</p>
-            </div>
-        </div>
+        
     </div>
 
-    <h2>Langages et logiciels maîtrisés</h2>
-    <p>Todo</p>
 
     <div id="experiences" class="experiences">
         <h1>&#60; Expériences et Projets /&#62; </h1>
