FIX menu burger

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
     <nav class="navMobile">
         <div class="ulMobile">
-            <a href="#">Accueil</a>
-            <a href="#presentation">Présentation</a>
-            <a href="#competences">Compétences</a>
-            <a href="#experiences">Expériences et Projets</a>
-            <a href="#contact">Contact</a>
+            <a class="menu" href="#">Accueil</a>
+            <a class="menu" href="#presentation">Présentation</a>
+            <a class="menu" href="#competences">Compétences</a>
+            <a class="menu" href="#experiences">Expériences et Projets</a>
+            <a class="menu" href="#contact">Contact</a>
         </div>
     </nav>
 
