--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">Accueil</a>
         <a href="#presentation">Présentation</a>
         <a href="#competences">Compétences</a>
-        <a href="#experiences">Expériences et Projets</a>
+        <a href="#projects">Mes Projets</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -35,7 +35,7 @@
             <a class="menu" href="#">Accueil</a>
             <a class="menu" href="#presentation">Présentation</a>
             <a class="menu" href="#competences">Compétences</a>
-            <a class="menu" href="#experiences">Expériences et Projets</a>
+            <a class="menu" href="#projects">Mes Projets</a>
             <a class="menu" href="#contact">Contact</a>
         </div>
     </nav>
@@ -149,8 +149,8 @@
     </div>
 
 
-    <div id="experiences" class="projects">
-        <h1>&#60; Expériences et Projets /&#62; </h1>
+    <div id="projects" class="projects">
+        <h1>&#60; Mes Projets /&#62; </h1>
 
         <div class="competences_content">
             <div class="project">
