--- a/projet_cookie.html
+++ b/projet_cookie.html
@@ -15,11 +15,11 @@
 <body>
 
     <nav>
-        <a href="index.html#">Accueil</a>
-        <a href="index.html#presentation">Présentation</a>
-        <a href="index.html#competences">Compétences</a>
-        <a href="index.html#experiences">Expériences et Projets</a>
-        <a href="index.html#contact">Contact</a>
+        <a href="#">Accueil</a>
+        <a href="#presentation">Présentation</a>
+        <a href="#competences">Compétences</a>
+        <a href="#projects">Mes Projets</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -32,11 +32,11 @@
 
     <nav class="navMobile">
         <div class="ulMobile">
-            <a href="index.html#">Accueil</a>
-            <a href="index.html#presentation">Présentation</a>
-            <a href="index.html#competences">Compétences</a>
-            <a href="index.html#experiences">Expériences et Projets</a>
-            <a href="index.html#contact">Contact</a>
+            <a class="menu" href="#">Accueil</a>
+            <a class="menu" href="#presentation">Présentation</a>
+            <a class="menu" href="#competences">Compétences</a>
+            <a class="menu" href="#projects">Mes Projets</a>
+            <a class="menu" href="#contact">Contact</a>
         </div>
     </nav>
 
