MAJ menu, cv + DELETE styles (flip card) + DELETE annexes

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="competences_content">
             <div class="project">
                 <a href="stage_neolink.html">
-                    <div class="experience_img">
+                    <div class="project_img">
                         <img src="annexes/icon_neolink.png">
                     </div>
                     <p>Stage Néolink</p>
@@ -164,7 +164,7 @@
 
             <div class="project">
                 <a href="stage_cnrs.html">
-                    <div class="experience_img">
+                    <div class="project_img">
                         <img src="annexes/icon_cnrs.png">
                     </div>
                     <p>Stage CNRS</p>
@@ -173,7 +173,7 @@
 
             <div class="project">
                 <a href="motherload.html">
-                    <div class="experience_img">
+                    <div class="project_img">
                         <img src="annexes/icon_motherload.png">
                     </div>
                     <p>Motherload</p>
@@ -181,8 +181,8 @@
             </div>
 
             <div class="project">
-                <a href="#">
-                    <div class="experience_img">
+                <a href="jpo_orleans.html">
+                    <div class="project_img">
                         <img src="annexes/icon_jpo.jpg">
                     </div>
                     <p>JPO Orléans</p>
@@ -190,8 +190,8 @@
             </div>
 
             <div class="project">
-                <a href="#">
-                    <div class="experience_img">
+                <a href="todolist.html">
+                    <div class="project_img">
                         <img src="annexes/icon_todolist.png">
                     </div>
                     <p>ToDoList</p>
@@ -199,8 +199,8 @@
             </div>
 
             <div class="project">
-                <a href="#">
-                    <div class="experience_img">
+                <a href="petit_ou_grand.html">
+                    <div class="project_img">
                         <img src="annexes/icon_petitougrand.png">
                     </div>
                     <p>Petit ou Grand</p>
@@ -208,8 +208,8 @@
             </div>
 
             <div class="project">
-                <a href="#">
-                    <div class="experience_img">
+                <a href="cookie_clicker.html">
+                    <div class="project_img">
                         <img src="annexes/icon_cookie.png">
                     </div>
                     <p>Cookie Clicker</p>
@@ -217,8 +217,8 @@
             </div>
 
             <div class="project">
-                <a href="#">
-                    <div class="experience_img">
+                <a href="tictactoe.html">
+                    <div class="project_img">
                         <img src="annexes/icon_tictactoe.png">
                     </div>
                     <p>TicTacToe</p>
