--- a/stage_cnrs.html
+++ b/stage_cnrs.html
@@ -15,11 +15,11 @@
 <body>
 
     <nav>
-        <a href="#">Accueil</a>
-        <a href="#presentation">Présentation</a>
-        <a href="#competences">Compétences</a>
-        <a href="#projects">Mes Projets</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html#">Accueil</a>
+        <a href="index.html#presentation">Présentation</a>
+        <a href="index.html#competences">Compétences</a>
+        <a href="index.html#projects">Mes Projets</a>
+        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -32,19 +32,21 @@
 
     <nav class="navMobile">
         <div class="ulMobile">
-            <a class="menu" href="#">Accueil</a>
-            <a class="menu" href="#presentation">Présentation</a>
-            <a class="menu" href="#competences">Compétences</a>
-            <a class="menu" href="#projects">Mes Projets</a>
-            <a class="menu" href="#contact">Contact</a>
+            <a class="menu" href="index.html#">Accueil</a>
+            <a class="menu" href="index.html#presentation">Présentation</a>
+            <a class="menu" href="index.html#competences">Compétences</a>
+            <a class="menu" href="index.html#projects">Mes Projets</a>
+            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
-    <div class="experience_content">
+    <div class="project_content">
         <h1>&#60; Stage CNRS /&#62; </h1>
-        <div class="experience_resume">
-            <img class="roll_up_img" src="annexes/MATEX_Roll_Up.png" draggable="false">
-            <div class="experience_text">
+        <div class="project_content_container">
+            <div class="project_content_img">
+                <img src="annexes/MATEX_Roll_Up.png" draggable="false">
+            </div>
+            <div class="project_content_text">
                 <p>
                     Stage de 12 semaines au sein du CNRS d'Orléans dans le cadre de mon DUT. Réalisations d'éléments de communication pour lancer le projet ARD MATEX porté par la région CVL
                     Ce stage de fin de DUT constitue ma première expérience professionnelle dans le domaine de la communication.
@@ -57,7 +59,7 @@
                     éditoriales.
                 </p>
                 <div class="download_btn">
-                    <a href="annexes/cv.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
+                    <a href="annexes/rapport_cnrs.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
                 </div>
             </div>
         </div>
