--- a/motherload.html
+++ b/motherload.html
@@ -15,11 +15,11 @@
 <body>
 
     <nav>
-        <a href="#">Accueil</a>
-        <a href="#presentation">Présentation</a>
-        <a href="#competences">Compétences</a>
-        <a href="#projects">Mes Projets</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html#">Accueil</a>
+        <a href="index.html#presentation">Présentation</a>
+        <a href="index.html#competences">Compétences</a>
+        <a href="index.html#projects">Mes Projets</a>
+        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -32,28 +32,31 @@
 
     <nav class="navMobile">
         <div class="ulMobile">
-            <a class="menu" href="#">Accueil</a>
-            <a class="menu" href="#presentation">Présentation</a>
-            <a class="menu" href="#competences">Compétences</a>
-            <a class="menu" href="#projects">Mes Projets</a>
-            <a class="menu" href="#contact">Contact</a>
+            <a class="menu" href="index.html#">Accueil</a>
+            <a class="menu" href="index.html#presentation">Présentation</a>
+            <a class="menu" href="index.html#competences">Compétences</a>
+            <a class="menu" href="index.html#projects">Mes Projets</a>
+            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
-    <div class="experience_content">
-        <h1>&#60; Projet Mobile : Motherload /&#62; </h1>
-        <p>J'ai réalisé ce projet au cours de ma 1re année de Master Informatique dans le cadre d'un cours de
-            Programmation Mobile Android.</p>
-        <p>Communiquer avec des web services php, bdd, j'ai fait des ajouts sur mon temps perso après le projet...</p>
-
-        <div class="smartphone">
-            <div class="content">
-                <video controls width="300px" height="550px">
-                    <source src="annexes/motherload_recording.mp4" type="video/mp4" />
-                </video>
+    <div class="project_content">
+        <h1>&#60; Application Mobile : Motherload /&#62; </h1>
+        <div class="project_content_container">
+            <div class="smartphone_container">
+                <div class="smartphone">
+                    <div class="content">
+                        <video controls width="300px" height="550px">
+                            <source src="annexes/motherload_recording.mp4" type="video/mp4" />
+                        </video>
+                    </div>
+                </div>
+            </div>
+            <div class="project_content_text">
+                <p>J'ai réalisé ce projet au cours de ma 1re année de Master Informatique dans le cadre d'un cours de Programmation Mobile Android.</p>
+                <p>Communiquer avec des web services php, bdd, j'ai fait des ajouts sur mon temps perso après le projet...</p>
             </div>
         </div>
-        
     </div>
 
 </body>
