--- a/stage_neolink.html
+++ b/stage_neolink.html
@@ -15,11 +15,11 @@
 <body>
 
     <nav>
-        <a href="#">Accueil</a>
-        <a href="#presentation">Présentation</a>
-        <a href="#competences">Compétences</a>
-        <a href="#projects">Mes Projets</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html#">Accueil</a>
+        <a href="index.html#presentation">Présentation</a>
+        <a href="index.html#competences">Compétences</a>
+        <a href="index.html#projects">Mes Projets</a>
+        <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -32,24 +32,24 @@
 
     <nav class="navMobile">
         <div class="ulMobile">
-            <a class="menu" href="#">Accueil</a>
-            <a class="menu" href="#presentation">Présentation</a>
-            <a class="menu" href="#competences">Compétences</a>
-            <a class="menu" href="#projects">Mes Projets</a>
-            <a class="menu" href="#contact">Contact</a>
+            <a class="menu" href="index.html#">Accueil</a>
+            <a class="menu" href="index.html#presentation">Présentation</a>
+            <a class="menu" href="index.html#competences">Compétences</a>
+            <a class="menu" href="index.html#projects">Mes Projets</a>
+            <a class="menu" href="index.html#contact">Contact</a>
         </div>
     </nav>
 
-    <div class="experience_content">
+    <div class="project_content">
         <h1>&#60; Stage Néolink /&#62; </h1>
-        <div class="experience_resume">
-            <img class="roll_up_img" src="annexes/neolink_logo.png" draggable="false">
-            <div class="experience_text">
+        <div class="project_content_container">
+            <img class="project_content_img" src="annexes/neolink_logo.png" draggable="false">
+            <div class="project_content_text">
                 <p>Ce stage a constitué ma première expérience professionnelle dans le domaine de l'informatique</p>
                 <p>Stage de 12 semaines au sein de Néolink dans le cadre de ma Licence informatique.</p>
                 <p>Prise en charge de tickets de maintenance en PHP sur le framework de Néolink : Phuton</p>
                 <div class="download_btn">
-                    <a href="annexes/cv.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
+                    <a href="annexes/rapport_neolink.pdf" target="_blank"><span>Consulter le rapport de Stage</span></a>
                 </div>
             </div>
         </div>
